--- a/release/src/router/Makefile
+++ b/release/src/router/Makefile
@@ -2767,13 +2767,15 @@ openpam-clean:
 	@[ ! -f openpam/Makefile ] || $(MAKE) -C openpam clean
 	@rm -f openpam/stamp-h1
 
-openvpn/stamp-h1: lzo zlib nvram
+openvpn/stamp-h1:
 	cd openvpn && ./autogen.sh && \
-	export OPENSSL_CFLAGS="-I$(TOP)/openssl"; \
-	export OPENSSL_LIBS="-L$(TOP)/openssl -lcrypto -lssl"; \
-	CFLAGS="-O3 -Wall $(EXTRACFLAGS) -ffunction-sections -fdata-sections $(if $(RTCONFIG_HTTPS),-I$(TOP)/openssl/include) $(if $(RTCONFIG_BCMARM),,-std=gnu99)" \
-	LDFLAGS="$(EXTRALDFLAGS) -L$(TOP)/nvram$(BCMEX) -lnvram -L$(TOP)/shared -lshared $(if $(RTCONFIG_QTN),-L$(TOP)/libqcsapi_client -lqcsapi_client) -L$(TOP)/zlib -lz -L$(TOP)/lzo/src/.libs -L$(TOP)/openpam/lib/libpam/.libs -ffunction-sections -fdata-sections -Wl,--gc-sections" \
-	CPPFLAGS="-I$(TOP)/lzo/include -I$(TOP)/openpam/include -I$(TOP)/shared -I$(SRCBASE)/include" \
+	export OPENSSL_CRYPTO_CFLAGS="-I$(TOP)/openssl"; \
+	export OPENSSL_CRYPTO_LIBS="-L$(TOP)/openssl -lcrypto"; \
+	export OPENSSL_SSL_CFLAGS="-I$(TOP)/openssl"; \
+	export OPENSSL_SSL_LIBS="-L$(TOP)/openssl -lssl"; \
+	CFLAGS="-O3 -Wall $(EXTRACFLAGS) -ffunction-sections -fdata-sections $(if $(RTCONFIG_HTTPS),-I$(TOP)/openssl/include/ssl) $(if $(RTCONFIG_BCMARM),,-std=gnu99)" \
+	LDFLAGS="$(EXTRALDFLAGS) -L$(TOP)/nvram$(BCMEX) -lnvram -L$(TOP)/shared -lshared $(if $(RTCONFIG_QTN),-L$(TOP)/libqcsapi_client -lqcsapi_client) $(if $(RTCONFIG_HTTPS),-L$(TOP)/openssl -lcrypto -lssl) -L$(TOP)/zlib -lz -L$(TOP)/lzo/src/.libs -L$(TOP)/openpam/lib/libpam/.libs -ffunction-sections -fdata-sections -Wl,--gc-sections" \
+	CPPFLAGS="-I$(TOP)/lzo/include -I$(TOP)/openssl/include -I$(TOP)/openpam/include -I$(TOP)/shared -I$(SRCBASE)/include" \
 	IPROUTE="/usr/sbin/ip" IFCONFIG="/sbin/ifconfig" ROUTE="/sbin/route" \
 	$(CONFIGURE) --prefix=/usr --bindir=/usr/sbin --libdir=/usr/lib  --enable-iproute2 \
 	--disable-debug --enable-management --disable-small \
@@ -2782,7 +2784,7 @@ openvpn/stamp-h1: lzo zlib nvram
 	ac_cv_lib_resolv_gethostbyname=no
 	touch $@
 
-openvpn: openvpn/stamp-h1 shared openssl lzo openpam zlib
+openvpn: openvpn/stamp-h1 shared nvram lzo zlib openssl openpam
 	$(MAKE) -C $@
 
 openvpn-clean:
