--- a/release/src/router/Makefile
+++ b/release/src/router/Makefile
@@ -3056,12 +3056,11 @@ curl/Makefile: curl/configure
 	@cd curl && CC=$(CC) \
 	CFLAGS="-Os -Wall -ffunction-sections -fdata-sections" \
 	./$(CONFIGURE) --prefix=/usr --bindir=/usr/sbin --libdir=/usr/lib \
-	--enable-http --with-ssl=$(TOP)/openssl/ssl \
-	$(if $(RTCONFIG_IPV6),--enable-ipv6,--disable-ipv6) \
+	--enable-http --with-ssl=$(TOP)/openssl \
+	$(if $(RTCONFIG_IPV6),--enable-ipv6) \
 	--disable-gopher --disable-dict --disable-telnet \
 	--disable-proxy --disable-manual --disable-libcurl-option \
 	--with-ca-bundle=/rom/ca-bundle.crt \
-	CPPFLAGS='-I$(TOP)/openssl/include' \
 	LDFLAGS='$(LDFLAGS) -L$(TOP)/openssl' LIBS='-lcrypto -lssl -ldl'
 
 curl-install: curl
