--- a/release/src/router/openpam/configure.ac
+++ b/release/src/router/openpam/configure.ac
@@ -81,13 +81,19 @@ AC_ARG_WITH(su,
     [with_su=no])
 AM_CONDITIONAL([WITH_SU], [test x"$with_su" = x"yes"])
 
+AC_ARG_WITH(system-libpam,
+    AC_HELP_STRING([--with-system-libpam], [use system libpam]),
+    [],
+    [with_system_libpam=no])
+AM_CONDITIONAL([WITH_SYSTEM_LIBPAM], [test x"$with_system_libpam" = x"yes"])
+
 AC_CHECK_HEADERS([crypt.h])
 
 AC_CHECK_FUNCS([asprintf vasprintf])
 AC_CHECK_FUNCS([dlfunc fdlopen])
 AC_CHECK_FUNCS([fpurge])
 AC_CHECK_FUNCS([setlogmask])
-AC_CHECK_FUNCS([strlcat strlcmp strlcpy])
+AC_CHECK_FUNCS([strlcat strlcmp strlcpy strlset])
 
 saved_LIBS="${LIBS}"
 LIBS=""
@@ -110,9 +116,28 @@ CRYPTO_LIBS="${LIBS}"
 LIBS="${saved_LIBS}"
 AC_SUBST(CRYPTO_LIBS)
 
+saved_LIBS="${LIBS}"
+LIBS=""
+AC_CHECK_LIB([pam], [pam_start])
+SYSTEM_LIBPAM="${LIBS}"
+LIBS="${saved_LIBS}"
+AC_SUBST(SYSTEM_LIBPAM)
+
+save_LIBS="${LIBS}"
+LIBS=""
+AC_SEARCH_LIBS([cryb_test_version], [cryb-test], [
+  CRYB_TEST_LIBS="${LIBS}"
+], [
+  CRYB_TEST_LIBS=""
+  AC_MSG_WARN([cryb-test library not available, unit tests disabled])
+])
+LIBS="${save_LIBS}"
+AC_SUBST(CRYB_TEST_LIBS)
+AM_CONDITIONAL([WITH_TEST], [ test x"$CRYB_TEST_LIBS" != x"" ])
+
 AC_ARG_ENABLE([developer-warnings],
     AS_HELP_STRING([--enable-developer-warnings], [enable strict warnings (default is NO)]),
-    [CFLAGS="${CFLAGS} -Wall -Wextra"])
+    [CFLAGS="${CFLAGS} -Wall -Wextra -Wcast-qual"])
 AC_ARG_ENABLE([debugging-symbols],
     AS_HELP_STRING([--enable-debugging-symbols], [enable debugging symbols (default is NO)]),
     [CFLAGS="${CFLAGS} -O0 -g -fno-inline"])
