--- a/release/src/router/others/Makefile
+++ b/release/src/router/others/Makefile
@@ -57,6 +57,7 @@ ifeq ($(RTCONFIG_OPENVPN),y)
 	install -m 0700 setuprsa.sh $(INSTALLDIR)/usr/sbin
 	install -m 0700 -D updown.sh $(INSTALLDIR)/usr/sbin
 	install -m 0700 -D vpnrouting.sh $(INSTALLDIR)/usr/sbin
+	install -m 0700 -D ovpnauth.sh $(INSTALLDIR)/usr/sbin
 endif
 
 # Get external ip via stun
